--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	</head>
 	<body>
 		<div id="app">
+      <h2>Total Inventory: {{ totalProducts }}</h2>
+
 			<ul>
 				<li v-for="product in products">
 					{{ product.quantity }} {{ product.name }}
