--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
 	</head>
 	<body>
 		<div id="app">
-      <h2>Total Inventory: {{ totalProducts }}</h2>
+			<h2>Total Inventory: {{ totalProducts }}</h2>
 
 			<ul>
 				<li v-for="product in products">
 					{{ product.quantity }} {{ product.name }}
 
 					<span v-if="product.quantity === 0"> - OUT OF STOCK </span>
+
+					<button @click="product.quantity += 1">Add</button>
 				</li>
 			</ul>
 		</div>
