--- a/index.html
+++ b/index.html
@@ -3,22 +3,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+
+		<title>Product App</title>
 	</head>
 	<body>
 		<div id="app">
-			<h2>Total Inventory: {{ totalProducts }}</h2>
-
-			<ul>
-				<li v-for="product in products">
-					<input type="number" v-model.number="product.quantity" />
-					{{ product.name }}
-
-					<span v-if="product.quantity === 0"> - OUT OF STOCK </span>
-
-					<button @click="product.quantity += 1">Add</button>
-				</li>
-			</ul>
+			<h1>{{ product.name }}</h1>
+			<h2> {{ product.description }}</h2>
 		</div>
 	</body>
 
