--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+		<link rel="stylesheet" href="style.css" />
+
 		<title>Product App</title>
 	</head>
 	<body>
 		<div id="app">
-			<h1>{{ product.name }}</h1>
-			<h2> {{ product.description }}</h2>
+			<div class="nav-bar"></div>
+
+			<div class="product">
+				<div class="product-image">
+					<img v-bind:src="image.src" :alt="image.alt" />
+				</div>
+
+				<div class="product-info">
+					<h1>{{ product }}</h1>
+				</div>
+			</div>
 		</div>
 	</body>
 
