--- a/index.html
+++ b/index.html
@@ -14,14 +14,19 @@
 
 			<div class="product">
 				<div class="product-image">
-					<img v-bind:src="image.src" :alt="image.alt" />
+					<a :href="image.link" :target="image.target">
+						<img v-bind:src="image.src" :alt="image.alt" />
+					</a>
 				</div>
 
 				<div class="product-info">
 					<h1>{{ product }}</h1>
 
-					<p v-if="inStock">In Stock</p>
-					<p v-else="inStock">Out of Stock</p>
+					<p v-if="inventory > 10">In Stock</p>
+					<p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+					<p v-else>Out of Stock</p>
+
+          <span v-show="onSale">On Sale!</span>
 				</div>
 			</div>
 		</div>
