--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 					<p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
 					<p v-else>Out of Stock</p>
 
-          <span v-show="onSale">On Sale!</span>
+					<span v-show="onSale">On Sale!</span>
+
+					<ul>
+						<li v-for="detail in details">{{ detail }}</li>
+					</ul>
+
+					<div v-for="variant in variants" :key="variant.variantId">
+						<p>{{ variant.variantColor }}</p>
+					</div>
 				</div>
 			</div>
 		</div>
