--- a/index.html
+++ b/index.html
@@ -22,23 +22,30 @@
 				<div class="product-info">
 					<h1>{{ product }}</h1>
 
-					<p v-if="inventory > 10">In Stock</p>
-					<p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
-					<p v-else>Out of Stock</p>
+					<p v-if="inStock">In Stock</p>
+					<p v-else :class="{ outStock: !inStock }">Out of Stock</p>
 
-					<span v-show="onSale">On Sale!</span>
+					<span v-show="onSale && inStock">On Sale!</span>
 
 					<ul>
 						<li v-for="detail in details">{{ detail }}</li>
 					</ul>
 
-					<div v-for="variant in variants" :key="variant.variantId">
-						<p @mouseover="updateProduct(variant.variantImage)">
-							{{ variant.variantColor }}
-						</p>
-					</div>
+					<div
+						v-for="variant in variants"
+						:key="variant.variantId"
+						class="color-box"
+						:style="{ backgroundColor: variant.variantColor }"
+						@mouseover="updateProduct(variant.variantImage)"
+					></div>
 
-					<button v-on:click="addToCart">Add to cart</button>
+					<button
+						v-on:click="addToCart"
+						:disabled="!inStock"
+						:class="{ disabledButton: !inStock }"
+					>
+						Add to cart
+					</button>
 					<button @click="removeFromCart">Remove from cart</button>
 
 					<div class="cart">
