--- a/index.html
+++ b/index.html
@@ -12,47 +12,7 @@
 		<div id="app">
 			<div class="nav-bar"></div>
 
-			<div class="product">
-				<div class="product-image">
-					<a :href="imageProduct.link" :target="imageProduct.target">
-						<img v-bind:src="image" :alt="imageProduct.alt" />
-					</a>
-				</div>
-
-				<div class="product-info">
-					<h1>{{ title }}</h1>
-
-					<p v-if="inStock">In Stock</p>
-					<p v-else :class="{ outStock: !inStock }">Out of Stock</p>
-
-					<span v-show="onSale && inStock">On Sale!</span>
-
-					<ul>
-						<li v-for="detail in details">{{ detail }}</li>
-					</ul>
-
-					<div
-						v-for="(variant, index) in variants"
-						:key="variant.variantId"
-						class="color-box"
-						:style="{ backgroundColor: variant.variantColor }"
-						@mouseover="updateProduct(index)"
-					></div>
-
-					<button
-						v-on:click="addToCart"
-						:disabled="!inStock"
-						:class="{ disabledButton: !inStock }"
-					>
-						Add to cart
-					</button>
-					<button @click="removeFromCart">Remove from cart</button>
-
-					<div class="cart">
-						<p>Cart({{cart}})</p>
-					</div>
-				</div>
-			</div>
+      <product></product>
 		</div>
 	</body>
 
