--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div id="app">
 			<div class="nav-bar"></div>
 
-      <product></product>
+      <product :premium='premium'></product>
 		</div>
 	</body>
 
