--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
 		<div id="app">
 			<div class="nav-bar"></div>
 
-      <product :premium='premium'></product>
+			<div class="cart">
+				<p>Cart({{cart}})</p>
+			</div>
+
+			<product
+				:premium="premium"
+				@add-to-cart="updateCart('add')"
+				@remove-from-cart="updateCart('remove')"
+			></product>
 		</div>
 	</body>
 
