--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			<div class="nav-bar"></div>
 
 			<div class="cart">
-				<p>Cart({{cart}})</p>
+				<p>Cart ({{ cart.length }})</p>
 			</div>
 
 			<product
 				:premium="premium"
-				@add-to-cart="updateCart('add')"
-				@remove-from-cart="updateCart('remove')"
+				@add-to-cart="updateCart"
+				@remove-from-cart="updateCart"
 			></product>
 		</div>
 	</body>
