--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 	</head>
 	<body>
 		<div id="app">
-			<div class="nav-bar"></div>
-
-			<div class="cart">
-				<p>Cart ({{ cart.length }})</p>
+			<div class="nav-bar">
+				<div class="cart">
+					<p>Cart ({{ cart.length }})</p>
+				</div>
 			</div>
 
 			<product
